@@ -9,15 +9,17 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 public class KhuyenMaiService {
     @Autowired
-    private KhachHangRepository khachHangRepository;
-    @Autowired
     private KhuyenMaiRepository khuyenMaiRepository;
+
+    @Autowired
+    private KhachHangRepository khachHangRepository;
 
     // Entity -> DTO
     private KhuyenMaiDTO toDTO(KhuyenMai entity) {
@@ -34,14 +36,8 @@ public class KhuyenMaiService {
         dto.setNgayBatDau(entity.getNgayBatDau());
         dto.setNgayKetThuc(entity.getNgayKetThuc());
         dto.setTrangThai(entity.getTrangThai());
-
-        // map nhiều khách hàng
-        dto.setIdKHs(entity.getKhachHangs() != null
-                ? entity.getKhachHangs().stream()
-                .map(KhachHang::getIdKH)
-                .collect(Collectors.toList())
-                : List.of());
-
+        dto.setCustomerIds(entity.getCustomers().stream().map(KhachHang::getIdKH).collect(Collectors.toList()));
+        dto.setCustomerNames(entity.getCustomers().stream().map(KhachHang::getTenKH).collect(Collectors.toList()));
         return dto;
     }
 
@@ -60,49 +56,21 @@ public class KhuyenMaiService {
         entity.setNgayBatDau(dto.getNgayBatDau());
         entity.setNgayKetThuc(dto.getNgayKetThuc());
         entity.setTrangThai(dto.getTrangThai());
-
-        // set danh sách khách hàng nếu có
-        if (dto.getIdKHs() != null && !dto.getIdKHs().isEmpty()) {
-            entity.setKhachHangs(
-                    dto.getIdKHs().stream()
-                            .map(id -> khachHangRepository.findById(id)
-                                    .orElseThrow(() -> new RuntimeException("Không tìm thấy khách hàng Id=" + id)))
-                            .collect(Collectors.toList())
-            );
+        if (dto.getCustomerIds() != null && !dto.getCustomerIds().isEmpty()) {
+            List<KhachHang> customers = khachHangRepository.findAllById(dto.getCustomerIds());
+            entity.setCustomers(customers);
+        } else {
+            entity.setCustomers(new ArrayList<>());
         }
-
         return entity;
     }
 
     // Tạo mới
     public KhuyenMaiDTO create(KhuyenMaiDTO dto) {
-        KhuyenMai entity = new KhuyenMai();
-
-        entity.setMaKM(dto.getMaKM());
-        entity.setTenKM(dto.getTenKM());
-        entity.setHinhThucGiam(dto.getHinhThucGiam());
-        entity.setMucGiam(dto.getMucGiam());
-        entity.setGiaTriDonHangToiThieu(dto.getGiaTriDonHangToiThieu());
-        entity.setGiamToiDa(dto.getGiamToiDa());
-        entity.setSoLuong(dto.getSoLuong());
-        entity.setDaSuDung(dto.getDaSuDung() != null ? dto.getDaSuDung() : 0);
-        entity.setNgayBatDau(dto.getNgayBatDau());
-        entity.setNgayKetThuc(dto.getNgayKetThuc());
-        entity.setTrangThai(dto.getTrangThai() != null ? dto.getTrangThai() : true);
-
-        // ✅ set danh sách khách hàng
-        entity.setKhachHangs(
-                dto.getIdKHs() == null ? List.of() :
-                        dto.getIdKHs().stream()
-                                .map(idKH -> khachHangRepository.findById(idKH)
-                                        .orElseThrow(() -> new RuntimeException("Không tìm thấy khách hàng Id=" + idKH)))
-                                .collect(Collectors.toList())
-        );
-
+        KhuyenMai entity = toEntity(dto);
         KhuyenMai saved = khuyenMaiRepository.save(entity);
         return toDTO(saved);
     }
-
 
     // Lấy theo ID
     public KhuyenMaiDTO getById(Integer id) {
@@ -118,13 +86,10 @@ public class KhuyenMaiService {
                 .collect(Collectors.toList());
     }
 
-
-
     // Cập nhật
     public KhuyenMaiDTO update(Integer id, KhuyenMaiDTO dto) {
         KhuyenMai entity = khuyenMaiRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy khuyến mãi"));
-
         entity.setMaKM(dto.getMaKM());
         entity.setTenKM(dto.getTenKM());
         entity.setHinhThucGiam(dto.getHinhThucGiam());
@@ -136,16 +101,12 @@ public class KhuyenMaiService {
         entity.setNgayBatDau(dto.getNgayBatDau());
         entity.setNgayKetThuc(dto.getNgayKetThuc());
         entity.setTrangThai(dto.getTrangThai());
-
-        // cập nhật lại danh sách khách hàng
-        entity.setKhachHangs(
-                dto.getIdKHs() == null ? List.of() :
-                        dto.getIdKHs().stream()
-                                .map(idKH -> khachHangRepository.findById(idKH)
-                                        .orElseThrow(() -> new RuntimeException("Không tìm thấy khách hàng Id=" + idKH)))
-                                .collect(Collectors.toList())
-        );
-
+        if (dto.getCustomerIds() != null && !dto.getCustomerIds().isEmpty()) {
+            List<KhachHang> customers = khachHangRepository.findAllById(dto.getCustomerIds());
+            entity.setCustomers(customers);
+        } else {
+            entity.setCustomers(new ArrayList<>());
+        }
         KhuyenMai updated = khuyenMaiRepository.save(entity);
         return toDTO(updated);
     }
@@ -157,27 +118,29 @@ public class KhuyenMaiService {
         khuyenMaiRepository.delete(entity);
     }
 
-    // Lấy danh sách khuyến mãi áp dụng cho khách hàng
+    // Lấy danh sách khuyến mãi áp dụng cho khách hàng (gán riêng hoặc toàn hệ thống)
     public List<KhuyenMaiDTO> getApplicableVouchers(Integer idKH) {
         LocalDateTime now = LocalDateTime.now();
-        return khuyenMaiRepository.findAll().stream()
-                .filter(km -> km.getTrangThai()
-                        && !km.getNgayBatDau().isAfter(now) // bắt đầu <= now
-                        && !km.getNgayKetThuc().isBefore(now) // kết thúc >= now
-                        && km.getSoLuong() > km.getDaSuDung()
-                        && (km.getKhachHangs().isEmpty() || // áp dụng cho tất cả
-                        km.getKhachHangs().stream().anyMatch(kh -> kh.getIdKH().equals(idKH))))
+        List<KhuyenMai> byCustomer = khuyenMaiRepository.findByCustomer(idKH, now);
+        List<KhuyenMai> global = khuyenMaiRepository.findGlobal(now);
+        List<KhuyenMai> all = new ArrayList<>();
+        all.addAll(byCustomer);
+        all.addAll(global);
+        return all.stream()
+                .filter(km -> km.getSoLuong() > km.getDaSuDung())
+                .filter(km -> Boolean.TRUE.equals(km.getTrangThai()))
                 .map(this::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-
+    // Lấy danh sách khuyến mãi chỉ gán cho khách hàng
     public List<KhuyenMaiDTO> getVouchersByCustomerId(Integer idKH) {
         LocalDateTime now = LocalDateTime.now();
-        return khuyenMaiRepository.findApplicableByKhachHang(idKH, now)
+        return khuyenMaiRepository.findByCustomer(idKH, now)
                 .stream()
                 .filter(km -> km.getSoLuong() > km.getDaSuDung())
+                .filter(km -> Boolean.TRUE.equals(km.getTrangThai()))
                 .map(this::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
